TIM-68: Add ID to ticket, user, project and customer API responses

--- a/web/api.yml
+++ b/web/api.yml
@@ -1809,6 +1809,10 @@ components:
     ChartDataSuccessResponse:
       type: object
       properties:
+        id:
+          type: integer
+          example: 1
+          description: id of user/customer/projekt/activity
         name:
           type: string
           example: "Kunde1"
