--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "psr-4": { "": "src/" },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
+    "autoload-dev": {
+      "psr-4": {"Tests\\": "tests/"}
+    },
     "require": {
         "php": ">=7.4",
         "ext-date": "*",
