TIM-81: Fix estimation in project edit form
The estimationText field was missing since 2018-11-08.
When editing an existing project and saving it, the estimation got lost.

Causing commit was 90440fe634da40593fb91e8ffce2ad1c88551143
> refactoring: use ORM

--- a/web/api.yml
+++ b/web/api.yml
@@ -2077,12 +2077,13 @@ components:
           - "1"
           example: "1"
         estimation:
-          type: string
-          example: "0"
+          type: number
+          example: 2400
+          description: Estimated duration in minutes
         estimationText:
           type: string
-          description: Estimated duration in minutes
-          example: 16m
+          example: 16d 4h
+          description: 'Human readable estimated duration ("w"eeks, "d"ays, "m"inutes)'
         billing:
           type: string
           enum:
