TIM-96: Add tests and testdata for left over routes
 -  Add tests for route /getData and /getData/days{days}
   - Add new test data
   - Allow 3+ numbers for /getData/days{days} routes
 - Use new user with new testdata for testGroupByWorktimeAction
   - Becasue route response changes with each new entry for user 1
     we only test for entrys of user 3
 - Add test for route /getSummary
   - Fix access to id in request
     request parameter only used for PATCH request
 - Add test for route /getTimeSummary
 - Add test for route /settings/save
 - Add test fot route /status/check

--- a/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
@@ -62,7 +62,7 @@ _getDataDays:
     path:  /getData/days/{days}
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getData, days: 3 }
     requirements:
-        days:  \d{1,2}
+        days:  \d+
 
 _getCustomers:
     path:  /getCustomers
