--- a/web/api.yml
+++ b/web/api.yml
@@ -598,11 +598,29 @@ paths:
                       $ref: '#/components/schemas/ProjectInfo'
 
   /getSummary:
-    get:
+    post:
       summary: Returns a summary about the customer, project,activity and ticket
       tags:
         - Summary
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                  example: 1
+              required:
+              - id
       responses:
+        '404':
+          description: No entry for id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NoEntryForId'
         '200':
           description: OK
           content:
