TIM-97: Add new function getAllEntriesAction()
 - function takes a array of parameters and returns entries filtered by parameter

--- a/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
@@ -38,6 +38,10 @@ interpretation_entries:
     path: /interpretation/entries
     defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:getLastEntries }
 
+interpretation_all_entries:
+    path:  /interpretation/allEntries
+    defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:getAllEntries }
+
 timetracking_save:
     path: /tracking/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Crud:save }
