--- a/web/api.yml
+++ b/web/api.yml
@@ -1075,6 +1075,148 @@ paths:
                   properties:
                   $ref: '#/components/schemas/ChartDataSuccessResponse'
 
+  /interpretation/allEntries:
+    get:
+      summary: Get all entries filtered by parameter. Not set parameter will not be searched (e.g. not declaring a project will return all projects). Data is sorted by descending id.
+      tags:
+        - Entries
+      parameters:
+        - $ref: '#/components/parameters/datestart'
+        - $ref: '#/components/parameters/dateend'
+        - in: query
+          name: project_id
+          description: Project ID
+          schema:
+            type: integer
+            example: 1
+        - in: query
+          name: customer_id
+          description: Customer ID
+          schema:
+            type: integer
+            example: 1
+        - in: query
+          name: activity_id
+          description: Activity ID
+          schema:
+            type: integer
+            example: 1
+        - in: query
+          name: maxResults
+          description: Number of returned entries, default = 50
+          schema:
+            type: integer
+            example: 50
+        - in: query
+          name: page
+          description: Offset
+          schema:
+            type: integer
+            example: 0
+      responses:
+        '406':
+          description: Error Not Acceptable
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Error for databasequery
+        '403':
+          description: Error Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ForbiddenResponse'
+        '401':
+          description: Error Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnauthorizedResponse'
+        '400':
+          description: invalid parameter value
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 'page can not be negative.'
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  links:
+                    type: object
+                    properties:
+                      self:
+                        type: string
+                      last:
+                        type: string
+                      prev:
+                        type: string
+                        description: url of previous entries set or null if no previous entries
+                      next:
+                        type: string
+                        description: url of next entries set or null if no more entries
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        date:
+                          type: string
+                          format: date
+                          example: "2000-01-30"
+                        start:
+                          type: string
+                          format: time
+                          example: "08:00"
+                        end:
+                          type: string
+                          format: time
+                          example: "10:40"
+                        description:
+                          type: string
+                          example: "Backen"
+                        ticket:
+                          type: string
+                          example: "FG-33"
+                        duration:
+                          type: integer
+                          description: The duration in minutes
+                          example: 160
+                        durationString:
+                          type: string
+                          description: The duration in string format (hh:mm)
+                          example: "02:40"
+                        user_id:
+                          type: integer
+                          example: 2
+                        project_id:
+                          type: integer
+                          example: 12
+                          nullable: true
+                        customer_id:
+                          type: integer
+                          example: 1
+                        activity_id:
+                          type: integer
+                          example: 1
+                          nullable: true
+                          description: Activity record ID, see /getActivities
+                        worklog_id:
+                          type: integer
+                          nullable: true
+                          description: ID of Jira work log entry
+                          example: null
+
   /login:
      post:
       summary: login
@@ -2425,6 +2567,7 @@ components:
     activity:
       in: query
       name: activity
+      description: Activity ID
       schema:
         type: integer
         example: 2
@@ -2432,6 +2575,7 @@ components:
     customer:
       in: query
       name: customer
+      description: Customer ID
       schema:
         type: integer
         example: 1
@@ -2439,6 +2583,7 @@ components:
     dateend:
       in: query
       name: dateend
+      description: Entries untill this date
       schema:
         type: string
         format: date
@@ -2447,6 +2592,7 @@ components:
     datestart:
       in: query
       name: datestart
+      description: Entries from this date onwards
       schema:
         type: string
         format: date
@@ -2462,6 +2608,7 @@ components:
     project:
       in: query
       name: project
+      description: Project ID
       schema:
         type: integer
         example: 2
