--- a/web/api.yml
+++ b/web/api.yml
@@ -177,6 +177,13 @@ paths:
             application/json:
               schema:
                 type: string
+                enum:
+                  - Please enter a valid user.
+                  - Please enter a valid contract start.
+                  - End date has to be greater than the start date.
+                  - There is already an ongoing contract with a start date in the future that overlaps with the new contract.
+                  - There is already an ongoing contract with a closed end date in the future.
+                  - There is more than one open-ended contract for the user.
                 example: Please enter a valid user.
         '200':
           description: OK
@@ -2154,6 +2161,7 @@ components:
       required:
         - user_id
         - start
+        - hours_0
         - hours_1
         - hours_2
         - hours_3
