--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
   "baseBranches": ["main", "v4"],
-  "lockFileMaintenance" {
+  "lockFileMaintenance": {
     "enabled": true,
     "schedule": ["at any time"]
   },
