--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=ThisTokenIsNotSoSecretChangeIt
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:root@localhost:3306/timetracker?serverVersion=8"
+DATABASE_URL="mysql://timetracker:timetracker@db:3306/timetracker?serverVersion=8"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/db_name?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
