--- a/.env.local
+++ b/.env.local
@@ -1,55 +1,18 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-# https://symfony.com/doc/current/configuration/secrets.html
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
-###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=ThisTokenIsNotSoSecretChangeIt
-###< symfony/framework-bundle ###
-
-###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:root@localhost:3306/timetracker?serverVersion=8"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/db_name?serverVersion=16&charset=utf8"
-###< doctrine/doctrine-bundle ###
-
-###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
-###< symfony/mailer ###
-
-###> sentry/sentry-symfony ###
-SENTRY_DSN=""
-###< sentry/sentry-symfony ###
 
 ###> LDAP Configuration ###
 LDAP_HOST="192.168.1.6"
 # LDAP port: 0 use default ports; 336 non SSL; 636 SSL
-LDAP_PORT=636
+LDAP_PORT=389
 LDAP_READUSER="readuser"
 LDAP_READPASS="readuser"
 LDAP_BASEDN="DC=NETRESEARCH,DC=NR"
 # use sAMAccountName for AD
 LDAP_USERNAMEFIELD="sAMAccountName"
 # use SSL: old, deprecated, method for encrypted connection
-LDAP_USESSL=true
+LDAP_USESSL=false
 # whether to create users in TimeTracker after successfully authenticated by LDAP but not existing in TimeTracker
 LDAP_CREATE_USER=true
-LDAPTLS_REQCERT=never
+#LDAPTLS_REQCERT=never
 ###< LDAP Configuration ###
 
 ###> Application Configuration ###
