--- a/.env.test
+++ b/.env.test
@@ -5,5 +5,5 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 APP_ENV=test
 
 # Database configuration for tests
-DATABASE_URL="mysql://unittest:unittest@localhost:3306/unittest?serverVersion=8"
+DATABASE_URL="mysql://unittest:unittest@db:3306/unittest?serverVersion=8"
 DATABASE_DRIVER="mysqli"
