--- a/compose.yml
+++ b/compose.yml
@@ -35,26 +35,13 @@ services:
     image: mariadb
     environment:
       - MYSQL_ROOT_PASSWORD=global123
-      - MYSQL_USER=global
-      - MYSQL_PASSWORD=global
+      - MYSQL_USER=timetracker
+      - MYSQL_PASSWORD=timetracker
       - MYSQL_DATABASE=timetracker
     volumes:
       - db-data:/var/lib/mysql
+      - ./tt_dump.sql:/docker-entrypoint-initdb.d/tt_dump.sql
     restart: always
-
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
 
 networks:
 
@@ -75,6 +62,3 @@ volumes:
   db-data:
     driver: local
 
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
