--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 parameters:
     locale: 'en'
+    secret: '%env(APP_SECRET)%'
     app_title: '%env(APP_TITLE)%'
     app_locale: '%env(APP_LOCALE)%'
     app_logo_url: '%env(APP_LOGO_URL)%'
@@ -27,12 +28,17 @@ services:
         autowire: true      # Automatically injects dependencies in your services
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         public: false       # Allows optimizing the container by removing unused services
+        bind:
+            $projectDir: '%kernel.project_dir%'
 
     # Makes classes in src/ available to be used as services
     # This creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php,Legacy}'
+        resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
 
     # Controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
@@ -50,9 +56,8 @@ services:
     Psr\Log\LoggerInterface:
         public: true
 
-    # Add the ExceptionSubscriber service with the exceptions logger
-    App\EventSubscriber\ExceptionSubscriber:
+    App\Security\LdapAuthenticationHandler:
         arguments:
-            $logger: '@monolog.logger.exceptions'
+            $logger: '@logger'
         tags:
-            - { name: kernel.event_subscriber }
+            - { name: 'security.authenticator.handler' }
