disable corp nav by default

--- a/.env
+++ b/.env
@@ -56,7 +56,7 @@ APP_LOCALE="en"
 APP_LOGO_URL="/build/images/logo.png"
 APP_MONTHLY_OVERVIEW_URL="https://stats.timetracker.nr/?user="
 APP_TITLE="Netresearch TimeTracker"
-APP_HEADER_URL="https://acme.org/corpnav/"
+APP_HEADER_URL=""
 APP_SHOW_BILLABLE_FIELD_IN_EXPORT=false
 # comma-separated list of user names that may act on behalf on other users
 SERVICE_USERS=""
