fix servcie registration

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -55,3 +55,8 @@ services:
     # Make core services public if needed for direct access
     Psr\Log\LoggerInterface:
         public: true
+
+    # Export service with alias
+    App\Services\Export:
+        public: true
+        autowire: true
