fix tests framework

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,6 +47,7 @@ security:
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/logout, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/status/check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/start, roles: ROLE_USER }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/, roles: ROLE_USER }
