--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,9 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "dms/phpunit-arraysubset-asserts": "^0.5.0",
         "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "^4.4",
         "symfony/debug-bundle": "^4.4",
         "symfony/maker-bundle": "^1.39",
         "symfony/web-profiler-bundle": "^4.4",
