--- a/config/packages/test/monolog.yaml
+++ b/config/packages/test/monolog.yaml
@@ -1,12 +1,48 @@
 monolog:
+    channels: ['deprecation', 'ldap']
     handlers:
         main:
-            type: fingers_crossed
-            action_level: error
-            handler: nested
-            excluded_http_codes: [404, 405]
-            channels: ["!event"]
-        nested:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
+            channels: ["!event", "!ldap", "!deprecation"]
+            formatter: monolog.formatter.json
+
+        # Dedicated handler for LDAP logs
+        ldap:
+            type: rotating_file
+            path: "%kernel.logs_dir%/%kernel.environment%.ldap.log"
+            level: debug
+            channels: ["ldap"]
+            max_files: 10
+            formatter: monolog.formatter.json
+
+        # Dedicated handler for deprecations
+        deprecation:
+            type: rotating_file
+            path: "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
+            level: debug
+            channels: ["deprecation"]
+            max_files: 10
+            formatter: monolog.formatter.json
+
+        # Filter to only capture deprecation messages
+        deprecation_filter:
+            type: filter
+            handler: deprecation
+            max_level: info
+            channels: ["php", "doctrine"]
+
+        console:
+            type: console
+            process_psr_3_messages: false
+            channels: ["!event", "!console"]
+
+        # Uncomment to get logging in your browser
+        # you may have to allow bigger header sizes in your Web server configuration
+        #firephp:
+        #    type: firephp
+        #    level: info
+        #chromephp:
+        #    type: chromephp
+        #    level: info
